--- a/pages/index/page/cellCulture.wxml
+++ b/pages/index/page/cellCulture.wxml
@@ -11,14 +11,14 @@
   </view>
   <!-- 右侧物品列表 -->
   <scroll-view scroll-y="true" scroll-into-view="{{toView}}" class="foods-wrapper">
-    <view wx:for="{{item}}" class="food-list" wx:for-index="parentIndex" wx:key="key">
-      <view id="order{{parentIndex}}" class="title">{{item.item_name}}</view>
-       <view class='goods-box' wx:for-item='items' wx:for="{{item.list}}" wx:key="unique">
+    <view wx:for="{{producteds}}" class="food-list" wx:for-index="parentIndex" wx:key="key">
+      <view id="order{{parentIndex}}" class="title">{{item.specification}}</view>
+       <!-- <view class='goods-box' wx:for-item='items' wx:for="{{item.list}}" wx:key="unique">
           <image class='goodsImg' src='{{items.url}}'></image>
           <!-- <view class='goodsName'>{{items.goodsName}}</view> -->
-          <view class='goodsName'>库存：100</view>
-          <view class='goodsName'>NO：10033</view>
-      </view>
+          <!-- <view class='goodsName'>库存：100</view>
+          <view class='goodsName'>NO：10033</view> -->
+      <!-- </view>  -->
 
       <!-- <scroll-view scroll-x="true">
         <view class="scroll-view-y">
